# advent-of-code-2024

./: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  shell.nix
.direnv/: nix-profile-24.05-61502m9h1jl40j7s  nix-profile-24.05-61502m9h1jl40j7s.rc
golang/: CONTRIBUTING.md  Makefile  README.md  go.mod  main.go
golang/cmd/: root.go  version.go
golang/config/: config.go
golang/days/: day01.go  day02.go  day03.go  day03_tests.go
golang/log/: log.go
python/: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml
python/docs/: index.md  mkdocs.yml
python/modules/aoc_2024/: main.py
python/modules/aoc_2024/exceptions/: custom_error.py
python/notes/: DEBT  NOTES  TODO
python/tests/unit/: test_unit_dummy.py
rust/: CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md
